genere los .hbs de la pagina de conceptos y agregue etiquetas a con el la liga a las vistas de cada concepto

--- a/views/conceptos.hbs
+++ b/views/conceptos.hbs
@@ -1,5 +1,5 @@
 <h1>conceptos</h1>
 
-<a href="#">Dato</a>
-<a href="#">Informacion</a>
-<a href="#">Sistemas de informacion</a>
+<a href="Dato">Dato</a>
+<a href="Informacion">Informacion</a>
+<a href="SistemasDeInformacion">Sistemas de informacion</a>
