Añado informacion la pagina de conceptos.

--- a/views/conceptos.hbs
+++ b/views/conceptos.hbs
@@ -1,14 +1,52 @@
 <h1>Conceptos</h1>
 <article class="">
   <h2>Dato</h2>
-  <p></p>
+  <p>
+<ul>
+  <li>Derivado del latin “datum” cuyo significado literal es “hecho”.</li>
+  <li>Un dato no dice nada por si solo, aislado en carece de valor o relevancia.</li>
+  <li>Los datos son los insumos para generar información.</li>
+  Caracteristicas:
+  <ul>
+    <li> Es construido o generado. </li>
+    <li> Debe ser almacenado en un medio físico.</li>
+    <li> Deben ser expresados en un lenguaje conocido.</li>
+  </ul>
+</ul>
+  </p>
+
 </article>
 
 <article class="">
   <h2>Informacion</h2>
-  <p></p>
+  <p>
+    Se produce información cuando un conjunto de datos son procesados
+    por un sistema. <br>
+    Para ser útil, la información debe ser relevante, completa, precisa y
+    actual.
+  </p>
+  Caracteristicas:
+  <ul>
+    <li> Relevante. </li>
+    <li> Organizada para un proposito.</li>
+    <li> Tiene un contexto.</li>
+  </ul>
 </article>
+
 <article class="">
   <h2>Sistemas de informacion</h2>
-  <p></p>
+  <p>
+
+    Sistema de información se puede entender como el conjunto de tecnologías, procesos, aplicaciones de negocios y software disponibles para las personas dentro de una organización.
+
+    Es un conjunto de elementos que interactúan entre sí con un fin común; que permite que la información esté disponible para satisfacer las necesidades en una organización. Los sistemas de información, permiten incrementar el crecimiento económico.
+
+    Un Sistema de Información realiza cuatro actividades básicas:
+    <ul>
+      <li>Entrada de información: proceso en el cual el sistema toma los datos que requiere.</li>
+      <li>Almacenamiento de información: puede hacerse por computadora o archivos físicos para conservar la información.</li>
+      <li>Procesamiento de la información: permite la transformación de los datos fuente en información que puede ser utilizada para la toma de decisiones</li>
+      <li>Salida de información: es la capacidad del sistema para producir  la información procesada o  sacar  los datos de entrada al exterior.</li>
+    </ul>
+  </p>
 </article>
