--- a/views/sistemas.hbs
+++ b/views/sistemas.hbs
@@ -1,3 +1,4 @@
 <h1>{{title}}</h1>
 
 <a href="spt">Sistema de Procesamiento de Transacciones</a>
+<a href="mis">Sistema de Información para la Administración</a>
