--- a/views/sistemas.hbs
+++ b/views/sistemas.hbs
@@ -2,3 +2,4 @@
 
 <a href="spt">Sistema de Procesamiento de Transacciones</a>
 <a href="mis">Sistema de Información para la Administración</a>
+<a href="crm">Administración de Relacion con el Cliente</a>
