Ahora la imagen se puede ver

--- a/views/spt.hbs
+++ b/views/spt.hbs
@@ -87,5 +87,5 @@ En todo momento las transacciones aisladas pueden ser consultadas.
 </section>
 <section>
   <h2>Arquitectura de un TPS</h2>
-  <img src="/public/images/arq_tps.jpg" alt="Arquitectura de un SPT">
+  <img src="/images/arq_tps.jpg" alt="Arquitectura de un SPT">
 </section>
