Eliminé el link ya que no existe una pagina para tal concepto.

--- a/views/mis.hbs
+++ b/views/mis.hbs
@@ -29,7 +29,7 @@
     <li> Sistemas de Inteligencia de negocio.  </li>
   </ul>
 
-  De un <a href="#">Sistema de Planificación de Recursos (ERP)</a>, que son sistemas que integran a los anteriores.
+  De un Sistema de Planificación de Recursos (ERP), que son sistemas que integran a los anteriores.
 </article>
 
 <article class="">
