Agrego imagenes a la pagina de TPS

--- a/views/spt.hbs
+++ b/views/spt.hbs
@@ -10,6 +10,8 @@
     monetarias, flujos de producción, registros de empleados, envios,
     entre otros, llamados transacciones.
   </p>
+
+<img src="/images/bank.jpeg" alt="bank">
 </section>
 
 
@@ -27,6 +29,8 @@
      <li>Durabilidad (Persistencia) </li>
    </ul>
   </p>
+
+  <img src="/images/POS-tps.jpg" alt="POS">
 </section>
 
 
@@ -72,6 +76,8 @@ integridad regresando los productos al stock.
       Esto permite que el sistema realice transacciones recurrentes y
       simultaneas.
   </p>
+
+  <img src="/images/POS.jpg" alt="POS">
 </section>
 
 <section>
