--- a/views/crm.hbs
+++ b/views/crm.hbs
@@ -10,6 +10,8 @@
       <li>Software para la administración de la relación con los clientes. Sistemas informáticos de apoyo a la gestión de las relaciones con los clientes, a la venta y al marketing,2​ y que se integran en los llamados Sistemas de Gestión Empresarial (SGE), y que incluyen CRM, ERP, PLM, SCM y SRM. El software de CRM puede comprender varias funcionalidades para gestionar las ventas y los clientes de la empresa: automatización y promoción de ventas, tecnologías data warehouse («almacén de datos») para agregar la información transaccional y proporcionar capa de reporting, dashboards e indicadores claves de negocio, funcionalidades para seguimiento de campañas de marketing y gestión de oportunidades de negocio, capacidades predictivas y de proyección de ventas.</li>
     </ul>
   </p>
+
+  <img src="/images/crm.jpg" alt="">
 </article>
 
 <article class="">
@@ -30,6 +32,8 @@
       <li>Apps y aplicaciones Web para el apoyo de clientes.</li>
       <li>Feedback</li>
     </ul>
+
+    <img src="/images/crm1.png" alt="">
   </article>
 
   <article class="">
@@ -53,6 +57,7 @@
       <li> Para ello se emplean cubos de datos o sistemas OLAP (On Line
       Analytical Processing)</li>
     </ul>
+    <img src="/images/crm3.jpg" alt="">
   </article>
 
   <article class="">
