--- a/views/mis.hbs
+++ b/views/mis.hbs
@@ -2,6 +2,7 @@
 
 <article class="">
   <h2>Definicion</h2>
+  <img src="/images/mis4.gif" alt="">
   <p>
     <ul>
     <li>Apoya a la gerencia con las ac/vidades de control, monitoreo y
@@ -14,6 +15,8 @@
     intervalo de /empo predefinido.</li>
   </ul>
   </p>
+
+  <img src="/images/mis1.png" alt="">
 </article>
 
 <article class="">
@@ -28,8 +31,8 @@
     <li> Sistema de ventas.</li>
     <li> Sistemas de Inteligencia de negocio.  </li>
   </ul>
-
   De un Sistema de Planificación de Recursos (ERP), que son sistemas que integran a los anteriores.
+  <img src="/images/mis2.png" alt="">
 </article>
 
 <article class="">
@@ -37,4 +40,6 @@
   <p>El MIS y sus sistemas aledaños contribuyen a la solución de problemas a través de dos formas básicas: los recursos de información que abarcan a toda la organización, y la identificación y comprensión de los problemas. Los recursos de información que abarcan toda la organización se refieren a que el MIS es un esfuerzo que requiere de toda la organización y que busca proporcionar información importante para la toma de decisiones. El sistema es un acuerdo y un compromiso formal por parte de
     los ejecutivos de poner computadoras al servicio de los gerentes. El MIS acondiciona el terreno para alcanzar logros en otras áreas de la empresa relacionadas con los SIBC, como son los DSS, los sistemas basados en conocimientos y la oficina virtual (McLeod, 2000). La identificación y comprensión de los problemas se refiere a que la idea o concepto fundamental en el que se basa el MIS es el mantenimiento de un flujo continuo de información hacia el gerente, ya que el gerente usa el MIS
     principalmente para detectar problemas actuales o urgentes, y posteriormente para entenderlos determinando las causales y sus ubicaciones</p>
+
+    <img src="/images/mis3.jpg" alt="">
 </article>
