--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,20 @@
 body {
-  padding: 50px;
+  padding: 0;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
 }
 
 a {
   color: #00B7FF;
+}
+
+#logo {
+  height: 50px;
+  margin: 6px 10px 6px 4%;
+}
+
+main {
+  flex: 1 0 auto;
 }
