--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,11 +1,100 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>{{title}}</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
 
-  </head>
-  <body>
-    {{{body}}}
-  </body>
+<head>
+  <title>{{title}}</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel='stylesheet' href='/stylesheets/style.css'/>
+  <link rel='stylesheet' href='/stylesheets/materialize.min.css'/>
+  <script src="/javascripts/materialize.min.js"></script>
+</head>
+
+<body>
+
+  <nav class="pink accent-3">
+    <div class="nav-wrapper">
+      <a href="#"><img id="logo" src="/images/logo_blanco-01.png" alt="logo"></a>
+      <h5 class="brand-logo">LiberTeam</h5>
+      <ul id="nav-items" class="right hide-on-med-and-down">
+        <li><a class="dropdown-trigger" data-target="id_teoria" href="#">Teoría Básica<i class="material-icons right">arrow_drop_down</i></a></li>
+        <li><a class="dropdown-trigger" data-target="id_tipos" href="#">Tipos<i class="material-icons right">arrow_drop_down</i></a></li>
+        <li><a class="dropdown-trigger" data-target="id_scrum" href="#">Scrum<i class="material-icons right">arrow_drop_down</i></a></li>
+        <li><a class="dropdown-trigger" data-target="id_equipo" href="#">Equipo<i class="material-icons right">arrow_drop_down</i></a></li>
+      </ul>
+    </div>
+  </nav>
+
+  <ul id="id_teoria" class="dropdown-content">
+    <li><a href="#">Conceptos</a></li>
+    <li><a href="#">Información Útil</a></li>
+    <li><a href="#">Componentes</a></li>
+  </ul>
+
+  <ul id="id_tipos" class="dropdown-content">
+    <li><a href="#">TPS</a></li>
+    <li><a href="#">MIS</a></li>
+    <li><a href="#">CRM</a></li>
+  </ul>
+
+  <ul id="id_scrum" class="dropdown-content">
+    <li><a href="#">Metodologias Ágiles</a></li>
+    <li><a href="#">Definición</a></li>
+    <li><a href="#">Roles</a></li>
+    <li><a href="#">Herramientas</a></li>
+  </ul>
+
+  <ul id="id_equipo" class="dropdown-content">
+    <li><a href="#">Dialid (PO)</a></li>
+    <li><a href="#">Eduardo (SM)</a></li>
+    <li><a href="#">Luis (ST)</a></li>
+    <li><a href="#">Marco (ST)</a></li>
+  </ul>
+
+  {{{body}}}
+
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+
+  <footer class="page-footer pink accent-3">
+    <div class="container">
+      <div class="row">
+        <div class="col l6 s12">
+          <h5 class="white-text">LiberTeam</h5>
+          <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+        </div>
+        <div class="col l4 offset-l2 s12">
+          <h5 class="white-text">Links</h5>
+          <ul>
+            <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+            <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+            <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+            <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="footer-copyright">
+      <div class="container">
+      © 2014 Copyright Text
+      <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+      </div>
+    </div>
+  </footer>
+
+  <script src="/javascripts/main.js"></script>
+</body>
+
 </html>
