--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -11,7 +11,7 @@
 
 <body>
 
-  <nav class="pink accent-3">
+  <nav class="blue-grey darken-1">
     <div class="nav-wrapper">
       <a href="#"><img id="logo" src="/images/logo_blanco-01.png" alt="logo"></a>
       <h5 class="brand-logo">LiberTeam</h5>
@@ -68,7 +68,7 @@
   <br>
   <br>
 
-  <footer class="page-footer pink accent-3">
+  <footer class="page-footer blue-grey darken-1">
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
