Links al navbar

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -31,9 +31,9 @@
   </ul>
 
   <ul id="id_tipos" class="dropdown-content">
-    <li><a href="#">TPS</a></li>
-    <li><a href="#">MIS</a></li>
-    <li><a href="#">CRM</a></li>
+    <li><a href="spt">TPS</a></li>
+    <li><a href="mis">MIS</a></li>
+    <li><a href="crm">CRM</a></li>
   </ul>
 
   <ul id="id_scrum" class="dropdown-content">
