puse mi rutas en el layout

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -25,9 +25,9 @@
   </nav>
 
   <ul id="id_teoria" class="dropdown-content">
-    <li><a href="#">Conceptos</a></li>
-    <li><a href="#">Información Útil</a></li>
-    <li><a href="#">Componentes</a></li>
+    <li><a href="conceptos">Conceptos</a></li>
+    <li><a href="Informacion">Información Útil</a></li>
+    <li><a href="Componentes">Componentes</a></li>
   </ul>
 
   <ul id="id_tipos" class="dropdown-content">
