Termine pagina de Informacion util

--- a/views/InformacionUtil.hbs
+++ b/views/InformacionUtil.hbs
@@ -5,5 +5,29 @@
 </article>
 <article class="">
   <h2>Utilidad</h2>
-  <p></p>
+  <p>La utilidad es el interés, provecho o fruto que se obtiene de algo. El término también permite nombrar a la cualidad de útil (que puede servir o ser aprovechado en algún sentido). Algo útil sirve para satisfacer una necesidad.</p>
+  <p>En el ámbito de la informática también se ha uso del término utilidad. En este caso viene a hacer referencia a cualquier tipo de herramienta que se emplea con el único y claro objetivo de servir no sólo para poder llevar a cabo la construcción de un programa determinado sino también para la posterior ejecución del mismo.</p>
+</article>
+<article class="">
+  <h2>Informacion util</h2>
+  <p>Para ser útil, la información debe ser relevante, completa, precisa y actual</p>
+  <h3>Caracteristicas</h3>
+  <ul>
+    <li>Accesible.- Mantener al alcance la información de una manera fácil, de tal forma que puedan obtenerla en el formato correcto y en el tiempo preciso para satisfacer sus necesidades.</li>
+    <li>Accesible.- Mantener al alcance la información de una manera fácil, de tal forma que puedan obtenerla en el formato correcto y en el tiempo preciso para satisfacer sus necesidades.</li>
+    <li>Exacta.- libre de errores. El sistema debe contar con mecanismos de verificación.</li>
+    <li>Completa.- contiene los hechos relevantes.</li>
+    <li>Económica .- El costo de la producción de la información debe ser
+    relativamente barato. Las personas que toman las decisiones siempre
+    deben balancear el valor de la información con el costo de producirla.</li>
+    <li>Flexible.- La información es fl exible cuando puede utilizarse para una
+    gran variedad de propósitos</li>
+    <li>Relevante.- Es relevante cuando es importante para las personas que
+    toman las decisiones.</li>
+    <li>Segura.- Protección al acceso de la información.</li>
+    <li>Accesible.- Los usuarios autorizados deben poder acceder a la información de una manera fácil, de tal forma que puedan obtenerla en el formato correcto y en el tiempo preciso para satisfacer sus necesidades.</li>
+    <li>Simple.- La información debe establecerse en términos claros y concisos.</li>
+    <li>Oportuna.- Cuando se requiere y tiene un valor para el negocio.</li>
+    <li>Verificable.- Puede ser comprobada para verificar que es correcta.</li>
+  </ul>
 </article>
