--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -26,7 +26,7 @@
 
   <ul id="id_teoria" class="dropdown-content">
     <li><a href="conceptos">Conceptos</a></li>
-    <li><a href="Informacion">Información Útil</a></li>
+    <li><a href="InformacionUtil">Información Útil</a></li>
     <li><a href="Componentes">Componentes</a></li>
   </ul>
 
