Intento hacer efecto para una imagen

--- a/views/spt.hbs
+++ b/views/spt.hbs
@@ -1,9 +1,9 @@
 <h1>{{title}}</h1>
 
-<section>
+<article class="">
   <h2>Definición</h2>
 
-  <p>
+  <p class="container">
     Su principal objetivo es llevar el registro de actividades y operaciones
     en una empresa evitando su perdida y/o corrupción ante fallos. Por
     ejemplo: depositos en efectivo, pago de recibos, transferencias
@@ -11,11 +11,11 @@
     entre otros, llamados transacciones.
   </p>
 
-<img src="/images/bank.jpeg" alt="bank">
-</section>
-
-
-
+  <div class="container">
+        <div class="parallax"><img src="/images/bank.jpeg" alt="bank"></div>
+      </div>
+</article>
+  
 <section>
   <h2>Transaccion</h2>
   <p>
