--- a/views/smc.hbs
+++ b/views/smc.hbs
@@ -2,8 +2,8 @@
 
 <form class="" action="" method="post">
   <label for="humedad">Humedad Minima</label>
-  <input id="humedadTxt"type="text" name="txtHum">
-  <button class="waves-effect waves-light btn" id="botonGuardar"type="button">Actualizar</button>
+  <input id="miTexto"type="text" name="txtHum">
+  <button class="btn" onclick="actualiza()"type="button">Actualizar</button>
 </form>
 
 <iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/788774/charts/1?bgcolor=%23ffffff&color=%23d62020&dynamic=true&results=50&title=Humedad+&type=line"></iframe>
