--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -4,14 +4,16 @@
 <head>
   <title>{{title}}</title>
   <!-- The core Firebase JS SDK is always required and must be listed first -->
-  <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-app.js"></script>
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel='stylesheet' href='/stylesheets/style.css'/>
   <link rel='stylesheet' href='/stylesheets/materialize.min.css'/>
+  <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase-database.js"></script>
   <script src="/javascripts/materialize.min.js"></script>
 </head>
 
 <body>
+
 
   <nav class="blue-grey darken-1">
     <div class="nav-wrapper">
