--- a/views/smc.hbs
+++ b/views/smc.hbs
@@ -1,8 +1,12 @@
 <h1>{{title}}</h1>
 
 <form class="" action="" method="post">
-  <label for="humedad">Humedad Minima</label>
-  <input id="miTexto"type="text" name="txtHum">
+  <label for="txtHum">Humedad Minima</label>
+  <input id="miTexto"type="text" name="txtHum" placeholder="Numero entre 0 y 100">
+
+  <label for="txtRegar">Regar manualmente</label>  
+  <input id="regar"type="text" name="txtRegar" placeholder="SI o NO">
+
   <button class="btn" onclick="actualiza()"type="button">Actualizar</button>
 </form>
 
