agregue la imagen que le faltaba a la pagina de informacion util

--- a/views/InformacionUtil.hbs
+++ b/views/InformacionUtil.hbs
@@ -1,4 +1,6 @@
 <h1>Informacion util</h1>
+<img src="/images/infoUtil.jpg" alt="" width="70%">
+
 <article class="">
   <h2>Informacion</h2>
   <p>La información es un conjunto organizado de datos procesados, que constituyen un mensaje que cambia el estado de conocimiento del sujeto o sistema que recibe dicho mensaje. </p>
@@ -10,24 +12,18 @@
 </article>
 <article class="">
   <h2>Informacion util</h2>
-  <p>Para ser útil, la información debe ser relevante, completa, precisa y actual</p>
+  <p>Para ser útil, la información debe ser relevante,  comleta, precisa y actual</p>
   <h3>Caracteristicas</h3>
   <ul>
-    <li>Accesible.- Mantener al alcance la información de una manera fácil, de tal forma que puedan obtenerla en el formato correcto y en el tiempo preciso para satisfacer sus necesidades.</li>
-    <li>Accesible.- Mantener al alcance la información de una manera fácil, de tal forma que puedan obtenerla en el formato correcto y en el tiempo preciso para satisfacer sus necesidades.</li>
-    <li>Exacta.- libre de errores. El sistema debe contar con mecanismos de verificación.</li>
-    <li>Completa.- contiene los hechos relevantes.</li>
-    <li>Económica .- El costo de la producción de la información debe ser
-    relativamente barato. Las personas que toman las decisiones siempre
-    deben balancear el valor de la información con el costo de producirla.</li>
-    <li>Flexible.- La información es fl exible cuando puede utilizarse para una
-    gran variedad de propósitos</li>
-    <li>Relevante.- Es relevante cuando es importante para las personas que
-    toman las decisiones.</li>
-    <li>Segura.- Protección al acceso de la información.</li>
-    <li>Accesible.- Los usuarios autorizados deben poder acceder a la información de una manera fácil, de tal forma que puedan obtenerla en el formato correcto y en el tiempo preciso para satisfacer sus necesidades.</li>
-    <li>Simple.- La información debe establecerse en términos claros y concisos.</li>
-    <li>Oportuna.- Cuando se requiere y tiene un valor para el negocio.</li>
-    <li>Verificable.- Puede ser comprobada para verificar que es correcta.</li>
+    <li><strong>Accesible.</strong><br>Mantener al alcance la información de una manera fácil, de tal forma que puedan obtenerla en el formato correcto y en el tiempo preciso para satisfacer sus necesidades.</li>
+    <li><strong>Exacta.</strong><br>Libre de errores. El sistema debe contar con mecanismos de verificación.</li>
+    <li><strong>Completa.</strong><br>Contiene los hechos relevantes.</li>
+    <li><strong>Económica.</strong><br>El costo de la producción de la información debe ser relativamente barato. Las personas que toman las decisiones siempre deben balancear el valor de la información con el costo de producirla.</li>
+    <li><strong>Flexible.</strong><br>La información es fl exible cuando puede utilizarse para una gran variedad de propósitos</li>
+    <li><strong>Relevante.</strong><br>Es relevante cuando es importante para las personas que toman las decisiones.</li>
+    <li><strong>Segura.</strong><br>Protección al acceso de la información.</li>
+    <li><strong>Simple.</strong><br>La información debe establecerse en términos claros y concisos.</li>
+    <li><strong>Oportuna.</strong><br>Cuando se requiere y tiene un valor para el negocio.</li>
+    <li><strong>Verificable.</strong><br>Puede ser comprobada para verificar que es correcta.</li>
   </ul>
 </article>
