agregue definicion de componentes logicos

--- a/views/Componentes.hbs
+++ b/views/Componentes.hbs
@@ -1,21 +1,42 @@
 <h1>Componentes de un sistema de información</h1>
-<article class="">
-  <h2>Hardware</h2>
-  <img src="/images/hard.jpg" alt="" width="50%">
-  <p>La palabra hardware en informática se refiere a las partes físicas, tangibles, de un sistema informático; sus componentes eléctricos, electrónicos, electromecánicos y mecánicos.​ Los cables, así como los gabinetes o cajas, los periféricos de todo tipo, y cualquier otro elemento físico involucrado, componen el hardware o soporte físico</p>
-</article>
-<article class="">
-  <h2>Software</h2>
-  <img src="/images/software.jpg" alt="" width="50%">
-  <p>Se conoce como software​ al soporte lógico de un sistema informático, que comprende el conjunto de los componentes lógicos necesarios que hacen posible la realización de tareas específicas.</p>
-</article>
-<article class="">
-  <h2>Datos</h2>
-  <img src="/images/datos.jpg" alt="" width="50%">
-  <p>Un dato es una representación simbólica (numérica, alfabética, algorítmica, espacial, etc.) de un atributo o variable cuantitativa o cualitativa. Los datos describen hechos empíricos, sucesos y entidades. Es un valor o referente que recibe el computador por diferentes medios, los datos representan la información que el programador manipula en la construcción de una solución o en el desarrollo de un algoritmo.</p>
-</article>
-<article class="">
-  <h2>Redes de computadoras</h2>
-  <img src="/images/redes.jpg" alt="" width="50%">
-  <p>Una red de computadoras (también llamada red de ordenadores, red de comunicaciones de datos o red informática) es un conjunto de equipos nodos y software conectados entre sí por medio de dispositivos físicos o inalámbricos que envían y reciben impulsos eléctricos, ondas electromagnéticas o cualquier otro medio para el transporte de datos, con la finalidad de compartir información, recursos y ofrecer servicios.</p>
-</article>
+<div class="">
+  <h2>Componentes Fiscos</h2>
+  <article class="">
+    <h3>Hardware</h3>
+    <img src="/images/hard.jpg" alt="" width="50%">
+    <p>La palabra hardware en informática se refiere a las partes físicas, tangibles, de un sistema informático; sus componentes eléctricos, electrónicos, electromecánicos y mecánicos.​ Los cables, así como los gabinetes o cajas, los periféricos de todo tipo, y cualquier otro elemento físico involucrado, componen el hardware o soporte físico</p>
+  </article>
+  <article class="">
+    <h3>Redes de computadoras</h3>
+    <img src="/images/redes.jpg" alt="" width="50%">
+    <p>Una red de computadoras (también llamada red de ordenadores, red de comunicaciones de datos o red informática) es un conjunto de equipos nodos y software conectados entre sí por medio de dispositivos físicos o inalámbricos que envían y reciben impulsos eléctricos, ondas electromagnéticas o cualquier otro medio para el transporte de datos, con la finalidad de compartir información, recursos y ofrecer servicios.</p>
+  </article>
+</div>
+<div class="">
+  <h2>Componentes Logicos</h2>
+  <article class="">
+    <h3>Software</h3>
+    <img src="/images/software.jpg" alt="" width="50%">
+    <p>Se conoce como software​ al soporte lógico de un sistema informático, que comprende el conjunto de los componentes lógicos necesarios que hacen posible la realización de tareas específicas.</p>
+  </article>
+  <article class="">
+    <h3>Datos</h3>
+    <img src="/images/datos.jpg" alt="" width="50%">
+    <p>Un dato es una representación simbólica (numérica, alfabética, algorítmica, espacial, etc.) de un atributo o variable cuantitativa o cualitativa. Los datos describen hechos empíricos, sucesos y entidades. Es un valor o referente que recibe el computador por diferentes medios, los datos representan la información que el programador manipula en la construcción de una solución o en el desarrollo de un algoritmo.</p>
+  </article>
+  <article class="">
+    <h3>Sistema Operativo</h3>
+    <img src="/images/sistope.jpg" alt="" width="50%">
+    <p>Un sistema operativo es el software principal o conjunto de programas de un sistema informático que gestiona los recursos de hardware y provee servicios a los programas de aplicación de software, ejecutándose en modo privilegiado respecto de los restantes (aunque puede que parte de él se ejecute en espacio de usuario)</p>
+  </article>
+  <article class="">
+    <h3>Base de datos</h3>
+    <img src="/images/basedatos.jpg" alt="" width="50%">
+    <p>Una base de datos es un conjunto de datos pertenecientes a un mismo contexto y almacenados sistemáticamente para su posterior uso. En este sentido; una biblioteca puede considerarse una base de datos compuesta en su mayoría por documentos y textos impresos en papel e indexados para su consulta. Actualmente, y debido al desarrollo tecnológico de campos como la informática y la electrónica, la mayoría de las bases de datos están en formato digital, siendo este un componente electrónico, por tanto se ha desarrollado y se ofrece un amplio rango de soluciones al problema del almacenamiento de datos.</p>
+  </article>
+  <article class="">
+    <h3>Aplicaciones informáticas</h3>
+    <img src="/images/appinf.jpg" alt="" width="50%">
+    <p>En informática, una aplicación es un programa informático diseñado como herramienta para permitir a un usuario realizar uno o diversos tipos de tareas. Esto lo diferencia principalmente de otros tipos de programas, como los sistemas operativos (que hacen funcionar la computadora), las utilidades (que realizan tareas de mantenimiento o de uso general), y las herramientas de desarrollo de software (para crear programas informáticos). Las aplicaciones pertenecen al software de aplicación.</p>
+  </article>
+</div>
