--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,9 @@
-<h1>{{title}}</h1>
+<div class="parallax-container">
+  <div class="parallax"><img class="titulo" src="images/700.jpg"></div>
+  <h1 class="center show-on-medium">{{title}}</h1>
+</div>
+
+<a href="smc">Sistema de riego</a>
+
 <a href="conceptos">conceptos</a>
 <a href="sistemas">Tipos de Sistemas</a>
