--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,8 +5,8 @@
   <title>{{title}}</title>
   <!-- The core Firebase JS SDK is always required and must be listed first -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <link rel='stylesheet' href='/stylesheets/style.css'/>
   <link rel='stylesheet' href='/stylesheets/materialize.min.css'/>
+  <link rel='stylesheet' href='/stylesheets/style.css'/>
   <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase-database.js"></script>
   <script src="/javascripts/materialize.min.js"></script>
@@ -14,8 +14,7 @@
 
 <body>
 
-
-  <nav class="blue-grey darken-1">
+  <nav class="blue-grey">
     <div class="nav-wrapper">
       <a href="#"><img id="logo" src="/images/logo_blanco-01.png" alt="logo"></a>
       <h5 class="brand-logo">LiberTeam</h5>
