--- a/views/smc.hbs
+++ b/views/smc.hbs
@@ -1,15 +1,39 @@
-<h1>{{title}}</h1>
+<h1 class="center">{{title}}</h1>
 
-<form class="" action="" method="post">
+<form class="col s12" action="" method="post">
+
+  <div class="row">
+    <div class="input-field col s6">
+      <label for="txtHum">Humedad Minima</label>
+      <input id="miTexto"type="text" name="txtHum" placeholder="Numero entre 0 y 100">
+    </div>
+    <div class="input-field col s6">
+      <label for="txtRegar">Regar manualmente</label>
+      <input id="regar"type="text" name="txtRegar" placeholder="SI o NO">
+    </div>
+  </div>
+  <!--
   <label for="txtHum">Humedad Minima</label>
   <input id="miTexto"type="text" name="txtHum" placeholder="Numero entre 0 y 100">
 
   <label for="txtRegar">Regar manualmente</label>
   <input id="regar"type="text" name="txtRegar" placeholder="SI o NO">
-
-  <button class="btn" onclick="actualiza()"type="button">Actualizar</button>
+  -->
+  <div class="center">
+    <button class="btn" onclick="actualiza()" type="button">Actualizar</button>
+  </div>
 </form>
 
-<iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/788774/charts/1?bgcolor=%23ffffff&color=%23d62020&dynamic=true&results=50&title=Humedad+&type=line"></iframe>
-<iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/788774/charts/2?bgcolor=%23ffffff&color=%23d62020&dynamic=true&results=20&type=line"></iframe>
-<iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/788774/widgets/74118"></iframe>
+<div class="row">
+  <div class="input-field col s6">
+    <iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/788774/charts/1?bgcolor=%23ffffff&color=%23d62020&dynamic=true&results=50&title=Humedad+&type=line"></iframe>      
+  </div>
+  <div class="input-field col s6">
+    <iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/788774/charts/2?bgcolor=%23ffffff&color=%23d62020&dynamic=true&results=20&type=line"></iframe>    
+  </div>
+</div>
+
+<div class="center">
+  <iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/788774/widgets/74118"></iframe>
+</div>
+
