Se corrigio un error en el readme

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,6 +3,28 @@
   <h1 class="center show-on-medium">{{title}}</h1>
 </div>
 
+
+<section>
+  <h4>Teoría Básica</h4>
+  <p>Conocerás los conceptos, componentes y principios que integran las bases de los Sistemas de 
+    Información</p>
+</section>
+
+<section>
+  <h4>Tipos</h4>
+  <p></p>
+</section>
+
+<section>
+  <h4>Scrum</h4>
+  <p></p>
+</section>
+
+<section>
+  <h4>Sistemas de Control</h4>
+  <p></p>
+</section>
+
 <a href="smc">Sistema de riego</a>
 
 <a href="conceptos">conceptos</a>
