Se completo la pagina de inicio

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,31 +1,85 @@
+
 <div class="parallax-container">
   <div class="parallax"><img class="titulo" src="images/700.jpg"></div>
-  <h1 class="center show-on-medium">{{title}}</h1>
+  <h1 class="center">{{title}}</h1>
 </div>
 
-
-<section>
-  <h4>Teoría Básica</h4>
-  <p>Conocerás los conceptos, componentes y principios que integran las bases de los Sistemas de 
-    Información</p>
+<section class="tb col s12">
+  <div class="row center">
+    <article class="col s7">
+      <h2>Teoria Basica</h2>
+      <p>Conocerás los conceptos, principios y componentes que integran las bases de los Sistemas de 
+        Información.</p>
+      <div class="left flotante">
+        <div class="fixed-action-btn" style="position: absolute;">
+          <a class="btn-floating btn-large red">
+            <i class="large material-icons">menu</i>
+          </a>
+          <ul>
+            <li><a href="Componentes" title="Componentes" class="btn-floating green"><i class="material-icons">settings_input_component</i></a></li>
+            <li><a href="InformacionUtil" title="Información Útil" class="btn-floating yellow darken-1"><i class="material-icons">info</i></a></li>
+            <li><a href="conceptos" title="Descripción" class="btn-floating indigo darken-2"><i class="material-icons">description</i></a></li>
+          </ul>
+        </div>
+      </div>
+    </article>
+    
+    <div class="col s5">
+      <img class="imgDef" src="images/definicion.jpg" alt="Teoria Basica">
+    </div>
+  </div>
 </section>
 
-<section>
-  <h4>Tipos</h4>
-  <p></p>
+<section class="tipos col s12">
+  <div class="row center">
+      <article class="right col s6">
+        <h2>Tipos</h2>
+        <p>Exiten diferentes tipos de sistemas, cada uno enfocado en atender una parte fundamental de la empresa 
+        o negocio: Clientes, Apoyo Gerencial, al igual que las Transacciones.</p>
+
+        <div class="left flotante">
+          <div class="fixed-action-btn" style="position: absolute;">
+            <a class="btn-floating btn-large red">
+              <i class="large material-icons">menu</i>
+            </a>
+            <ul>
+              <li><a href="crm" title="CRM" class="btn-floating indigo darken-2"><i class="material-icons">sentiment_satisfied</i></a></li>
+              <li><a href="mis" title="MIS" class="btn-floating yellow darken-1"><i class="material-icons">perm_contact_calendar</i></a></li>
+              <li><a href="spt" title="TPS" class="btn-floating green"><i class="material-icons">compare_arrows</i></a></li>
+            </ul>
+          </div>
+        </div>
+
+      </article>
+      <div class="left col s6">
+        <img class="imgTipos" src="images/tiposSistemas.jpg" alt="Tipos">
+      </div>
+  </div>
 </section>
 
-<section>
-  <h4>Scrum</h4>
-  <p></p>
+<section class="scrum col s12">
+  <div class="row center">
+      <article class="col s6">
+        <h2>Scrum</h2>
+        <p>La Metodologias Agiles han venido a ayudar a generar mejores y más rapidos resultados. Scrum es un 
+        marco de trabajo en el que los equipos son cross-funcionales capaces desarrollar proyectos de una 
+        forma iterativa e incremental.</p>
+        <div class="left flotante">
+          <div class="fixed-action-btn" style="position: absolute;">
+            <a class="btn-floating btn-large red">
+              <i class="large material-icons">menu</i>
+            </a>
+            <ul>
+              <li><a title="Herramientas" class="btn-floating indigo darken-2"><i class="material-icons">build</i></a></li>
+              <li><a title="Roles" class="btn-floating yellow darken-1"><i class="material-icons">face</i></a></li>
+              <li><a title="Definición" class="btn-floating blur"><i class="material-icons">description</i></a></li>
+              <li><a title="Metodologia Agil" class="btn-floating green"><i class="material-icons">directions_run</i></a></li>
+            </ul>
+          </div>
+        </div>
+      </article>
+      <div class="col s6">
+        <img class="imgScrum" src="images/scrum.jpg" alt="Scrum">
+      </div>
+  </div>
 </section>
-
-<section>
-  <h4>Sistemas de Control</h4>
-  <p></p>
-</section>
-
-<a href="smc">Sistema de riego</a>
-
-<a href="conceptos">conceptos</a>
-<a href="sistemas">Tipos de Sistemas</a>
