--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,8 +5,10 @@
   <title>{{title}}</title>
   <!-- The core Firebase JS SDK is always required and must be listed first -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alegreya&display=swap">
   <link rel='stylesheet' href='/stylesheets/materialize.min.css'/>
-  <link rel='stylesheet' href='/stylesheets/style.css'/>
+  <link rel="stylesheet" href="/stylesheets/global.css">
+  <link rel='stylesheet' href='/stylesheets/{{VC}}.css'/>
   <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase-database.js"></script>
   <script src="/javascripts/materialize.min.js"></script>
@@ -16,47 +18,13 @@
 
   <nav class="blue-grey">
     <div class="nav-wrapper">
-      <a href="#"><img id="logo" src="/images/logo_blanco-01.png" alt="logo"></a>
+      <a href="/"><img id="logo" src="/images/logo_blanco-01.png" alt="logo"></a>
       <h5 class="brand-logo">LiberTeam</h5>
-      <ul id="nav-items" class="right hide-on-med-and-down">
-        <li><a class="dropdown-trigger" data-target="id_teoria" href="#">Teoría Básica<i class="material-icons right">arrow_drop_down</i></a></li>
-        <li><a class="dropdown-trigger" data-target="id_tipos" href="#">Tipos<i class="material-icons right">arrow_drop_down</i></a></li>
-        <li><a class="dropdown-trigger" data-target="id_scrum" href="#">Scrum<i class="material-icons right">arrow_drop_down</i></a></li>
-        <li><a class="dropdown-trigger" data-target="id_equipo" href="#">Equipo<i class="material-icons right">arrow_drop_down</i></a></li>
-        <li><a class="dropdown-trigger" data-target="id_control" href="#">Control<i class="material-icons right">arrow_drop_down</i></a></li>
-      </ul>
+      {{#menu navigacion.menu navigacion.target}}{{/menu}}
     </div>
   </nav>
 
-  <ul id="id_teoria" class="dropdown-content">
-    <li><a href="conceptos">Conceptos</a></li>
-    <li><a href="InformacionUtil">Información Útil</a></li>
-    <li><a href="Componentes">Componentes</a></li>
-  </ul>
-
-  <ul id="id_tipos" class="dropdown-content">
-    <li><a href="spt">TPS</a></li>
-    <li><a href="mis">MIS</a></li>
-    <li><a href="crm">CRM</a></li>
-  </ul>
-
-  <ul id="id_scrum" class="dropdown-content">
-    <li><a href="#">Metodologias Ágiles</a></li>
-    <li><a href="#">Definición</a></li>
-    <li><a href="#">Roles</a></li>
-    <li><a href="#">Herramientas</a></li>
-  </ul>
-
-  <ul id="id_equipo" class="dropdown-content">
-    <li><a href="#">Dialid (PO)</a></li>
-    <li><a href="#">Eduardo (SM)</a></li>
-    <li><a href="#">Luis (ST)</a></li>
-    <li><a href="#">Marco (ST)</a></li>
-  </ul>
-
-  <ul id="id_control" class="dropdown-content">
-    <li><a href="smc">Monitor</a></li>
-  </ul>
+  {{#submenus navigacion.target navigacion.temas navigacion.ligas}}{{/submenus}}
 
   {{{body}}}  
 
@@ -65,27 +33,27 @@
       <div class="row">
         <div class="col l6 s12">
           <h5 class="white-text">LiberTeam</h5>
-          <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+          <p class="grey-text text-lighten-4">Proyecto final de Sistemas de Información.</p>
         </div>
         <div class="col l4 offset-l2 s12">
           <h5 class="white-text">Links</h5>
           <ul>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+            <li><a class="grey-text text-lighten-3" href="https://trello.com/b/yHp0IjuE/icoscrumliberteam2810">Trello</a></li>
+            <li><a class="grey-text text-lighten-3" href="https://github.com/eduardoschz/ICO_SCRUM_LiberTeam_2810">Github</a></li>
+            <li><a class="grey-text text-lighten-3" href="/smc">Sistemas de Control</a></li>
           </ul>
         </div>
       </div>
     </div>
     <div class="footer-copyright">
       <div class="container">
-      © 2014 Copyright Text
+      © 2019 Copyright. Todos los derechos reservados
       <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
       </div>
     </div>
   </footer>
 
-  <script src="/javascripts/main.js"></script>
+  <script src="/javascripts/{{VC}}.js"></script>
+  <script src="/javascripts/global.js"></script>
 </body>
 </html>
