--- a/views/InformacionUtil.hbs
+++ b/views/InformacionUtil.hbs
@@ -1,8 +1,8 @@
-<h1>Informacion util</h1>
+<h1>Informacion útil</h1>
 <img src="/images/infoUtil.jpg" alt="" width="70%">
 
 <article class="">
-  <h2>Informacion</h2>
+  <h2>Información</h2>
   <p>La información es un conjunto organizado de datos procesados, que constituyen un mensaje que cambia el estado de conocimiento del sujeto o sistema que recibe dicho mensaje. </p>
 </article>
 <article class="">
@@ -12,14 +12,14 @@
 </article>
 <article class="">
   <h2>Informacion util</h2>
-  <p>Para ser útil, la información debe ser relevante,  comleta, precisa y actual</p>
-  <h3>Caracteristicas</h3>
+  <p>Para ser útil, la información debe ser relevante,  completa, precisa y actual</p>
+  <h3>Características</h3>
   <ul>
     <li><strong>Accesible.</strong><br>Mantener al alcance la información de una manera fácil, de tal forma que puedan obtenerla en el formato correcto y en el tiempo preciso para satisfacer sus necesidades.</li>
     <li><strong>Exacta.</strong><br>Libre de errores. El sistema debe contar con mecanismos de verificación.</li>
     <li><strong>Completa.</strong><br>Contiene los hechos relevantes.</li>
     <li><strong>Económica.</strong><br>El costo de la producción de la información debe ser relativamente barato. Las personas que toman las decisiones siempre deben balancear el valor de la información con el costo de producirla.</li>
-    <li><strong>Flexible.</strong><br>La información es fl exible cuando puede utilizarse para una gran variedad de propósitos</li>
+    <li><strong>Flexible.</strong><br>La información es flexible cuando puede utilizarse para una gran variedad de propósitos</li>
     <li><strong>Relevante.</strong><br>Es relevante cuando es importante para las personas que toman las decisiones.</li>
     <li><strong>Segura.</strong><br>Protección al acceso de la información.</li>
     <li><strong>Simple.</strong><br>La información debe establecerse en términos claros y concisos.</li>
