Se corrigieron faltas ortográficas

--- a/views/Componentes.hbs
+++ b/views/Componentes.hbs
@@ -1,6 +1,6 @@
 <h1>Componentes de un sistema de información</h1>
 <div class="">
-  <h2>Componentes Fiscos</h2>
+  <h2>Componentes Físicos</h2>
   <article class="">
     <h3>Hardware</h3>
     <img src="/images/hard.jpg" alt="" width="50%">
