--- a/views/conceptos.hbs
+++ b/views/conceptos.hbs
@@ -5,9 +5,9 @@
   <p>
     <ul>
       <li>Derivado del latin “datum” cuyo significado literal es “hecho”.</li>
-      <li>Un dato no dice nada por si solo, aislado en carece de valor o relevancia.</li>
+      <li>Un dato no dice nada por sí solo, aislado carece de valor o relevancia.</li>
       <li>Los datos son los insumos para generar información.</li>
-      Caracteristicas:
+      Características:
       <ul>
         <li> Es construido o generado. </li>
         <li> Debe ser almacenado en un medio físico.</li>
@@ -26,7 +26,7 @@
     Para ser útil, la información debe ser relevante, completa, precisa y
     actual.
   </p>
-  Caracteristicas:
+  Características:
   <ul>
     <li> Relevante. </li>
     <li> Organizada para un proposito.</li>
@@ -35,7 +35,7 @@
 </article>
 
 <article class="">
-  <h2>Sistemas de informacion</h2>
+  <h2>Sistemas de información</h2>
   <p>
 
     Sistema de información se puede entender como el conjunto de tecnologías, procesos, aplicaciones de negocios y software disponibles para las personas dentro de una organización.
