--- a/views/crm.hbs
+++ b/views/crm.hbs
@@ -18,7 +18,7 @@
   <h2>Funciones</h2>
   <p>Cuando el software CRM está separado para gestionar el negocio, la gestión del ciclo de vida de las ventas y clientes es difícil o imposible. Y la gestión de ciclo de vida es muy importante ya que muchas empresas hoy en día interactúan con el cliente mucho tiempo después de que se realizó la venta, colaborando con ellos en la ingeniería bajo pedido (ETO), configurar a pedido (CTO) o procesos de gestión de servicios.
     Cada vez más el CRM debe ser extensible para apoyar a la planificación de recursos empresariales funcionalidades como la ingeniería, fabricación, compras, finanzas y gestión de servicios.
-    Debido a que el CRM de empresa - o el CRM estratégico - es una parte integral del ERP, aporta información completa del cliente sobre el proyecto, las facturas, inventario, etc
+    Debido a que el CRM de empresa - o el CRM estratégico - es una parte integral del ERP, aporta información completa del cliente sobre el proyecto, las facturas, inventario, etc.
   </p>
 </article>
 
@@ -71,8 +71,8 @@
       produciendo información del cliente casi de forma instantanea.</li>
       <li>Back-Office Es el subconjunto de herramientas que no tienen relación
       o interacción directa con el cliente. Pero si almacenan y procesan los
-      datos adquiridos de él. Requiere de operaciones de analisis o Mineria
-      de datos para obtener onformación compleja del comportamiento de
+      datos adquiridos de él. Requiere de operaciones de analisis o Minería
+      de datos para obtener información compleja del comportamiento de
       clientes. </li>
     </ul>
   </article>
