--- a/views/mis.hbs
+++ b/views/mis.hbs
@@ -1,18 +1,18 @@
 <h1>{{title}}</h1>
 
 <article class="">
-  <h2>Definicion</h2>
+  <h2>Definición</h2>
   <img src="/images/mis4.gif" alt="">
   <p>
     <ul>
-    <li>Apoya a la gerencia con las ac/vidades de control, monitoreo y
-    administra/va para la toma de decisiones.</li>
+    <li>Apoya a la gerencia con las actividades de control, monitoreo y
+    administrativa para la toma de decisiones.</li>
     <li>Orientado a la Gerencia de nivel medio.</li>
     <li>Sintetizan e informan el comportamiento de el nivel operativo,
     tomando como base datos de ERP, o un TPS, o de otros sistemas de
     todas las áreas de la organización.</li>
     <li>Permiten presentar un informe del estado de la organización en un
-    intervalo de /empo predefinido.</li>
+    intervalo de tiempo predefinido.</li>
   </ul>
   </p>
 
@@ -20,15 +20,15 @@
 </article>
 
 <article class="">
-  <h2>¿De donde viene la informacion?</h2>
+  <h2>¿De dónde viene la información?</h2>
   <p>De sistemas <a href="spt">TPS</a>: </p>
   <ul>
-    <li> Sistemas de inventario</li>
-    <li> Sistemas de planeación de producción.</li>
+    <li> Sistemas de Inventario</li>
+    <li> Sistemas de Planeación de Producción.</li>
     <li> Sistemas de Producción.</li>
-    <li> Sistema de contabilidad y finanzas.</li>
-    <li> Sistema de recursos Humanos.</li>
-    <li> Sistema de ventas.</li>
+    <li> Sistema de Contabilidad y Finanzas.</li>
+    <li> Sistema de Recursos Humanos.</li>
+    <li> Sistema de Ventas.</li>
     <li> Sistemas de Inteligencia de negocio.  </li>
   </ul>
   De un Sistema de Planificación de Recursos (ERP), que son sistemas que integran a los anteriores.
