--- a/views/spt.hbs
+++ b/views/spt.hbs
@@ -6,8 +6,8 @@
   <p class="container">
     Su principal objetivo es llevar el registro de actividades y operaciones
     en una empresa evitando su perdida y/o corrupción ante fallos. Por
-    ejemplo: depositos en efectivo, pago de recibos, transferencias
-    monetarias, flujos de producción, registros de empleados, envios,
+    ejemplo: depósitos en efectivo, pago de recibos, transferencias
+    monetarias, flujos de producción, registros de empleados, envíos,
     entre otros, llamados transacciones.
   </p>
 
@@ -17,7 +17,7 @@
 </article>
   
 <section>
-  <h2>Transaccion</h2>
+  <h2>Transacción</h2>
   <p>
     Una transacción es un intercambio de información que es reflejada en
     un medio persistente (por ejemplo un DBMS), y debe contar con las
