--- a/views/Componentes.hbs
+++ b/views/Componentes.hbs
@@ -1,6 +1,6 @@
-<h1>Componentes de un sistema de información</h1>
+<h1>Componentes de un sistema de informacion</h1>
 <div class="">
-  <h2>Componentes Físicos</h2>
+  <h2>Componentes Fisicos</h2>
   <article class="">
     <h3>Hardware</h3>
     <img src="/images/hard.jpg" alt="" width="50%">
@@ -35,7 +35,7 @@
     <p>Una base de datos es un conjunto de datos pertenecientes a un mismo contexto y almacenados sistemáticamente para su posterior uso. En este sentido; una biblioteca puede considerarse una base de datos compuesta en su mayoría por documentos y textos impresos en papel e indexados para su consulta. Actualmente, y debido al desarrollo tecnológico de campos como la informática y la electrónica, la mayoría de las bases de datos están en formato digital, siendo este un componente electrónico, por tanto se ha desarrollado y se ofrece un amplio rango de soluciones al problema del almacenamiento de datos.</p>
   </article>
   <article class="">
-    <h3>Aplicaciones informáticas</h3>
+    <h3>Aplicaciones informaticas</h3>
     <img src="/images/appinf.jpg" alt="" width="50%">
     <p>En informática, una aplicación es un programa informático diseñado como herramienta para permitir a un usuario realizar uno o diversos tipos de tareas. Esto lo diferencia principalmente de otros tipos de programas, como los sistemas operativos (que hacen funcionar la computadora), las utilidades (que realizan tareas de mantenimiento o de uso general), y las herramientas de desarrollo de software (para crear programas informáticos). Las aplicaciones pertenecen al software de aplicación.</p>
   </article>
