--- a/views/InformacionUtil.hbs
+++ b/views/InformacionUtil.hbs
@@ -1,8 +1,8 @@
-<h1>Informacion útil</h1>
+<h1>Informacion util</h1>
 <img src="/images/infoUtil.jpg" alt="" width="70%">
 
 <article class="">
-  <h2>Información</h2>
+  <h2>Informacion</h2>
   <p>La información es un conjunto organizado de datos procesados, que constituyen un mensaje que cambia el estado de conocimiento del sujeto o sistema que recibe dicho mensaje. </p>
 </article>
 <article class="">
@@ -13,7 +13,7 @@
 <article class="">
   <h2>Informacion util</h2>
   <p>Para ser útil, la información debe ser relevante,  completa, precisa y actual</p>
-  <h3>Características</h3>
+  <h3>Caracteristicas</h3>
   <ul>
     <li><strong>Accesible.</strong><br>Mantener al alcance la información de una manera fácil, de tal forma que puedan obtenerla en el formato correcto y en el tiempo preciso para satisfacer sus necesidades.</li>
     <li><strong>Exacta.</strong><br>Libre de errores. El sistema debe contar con mecanismos de verificación.</li>
