--- a/views/conceptos.hbs
+++ b/views/conceptos.hbs
@@ -35,7 +35,7 @@
 </article>
 
 <article class="">
-  <h2>Sistemas de información</h2>
+  <h2>Sistemas de informacion</h2>
   <p>
 
     Sistema de información se puede entender como el conjunto de tecnologías, procesos, aplicaciones de negocios y software disponibles para las personas dentro de una organización.
