--- a/views/crm.hbs
+++ b/views/crm.hbs
@@ -1,7 +1,7 @@
 <h1>{{title}}</h1>
 
 <article class="">
-  <h2>Definición</h2>
+  <h2>Definicion</h2>
   <p>
 
     La customer relationship management, más conocida por sus siglas CRM, puede tener varios significados:1​
@@ -37,7 +37,7 @@
   </article>
 
   <article class="">
-    <h3>Automatización de ventas y marketing</h3>
+    <h3>Automatizacion de ventas y marketing</h3>
     <ul>
       <li> Administración de clientes.</li>
       <li> Administración de campañas.</li>
@@ -50,7 +50,7 @@
   </article>
 
   <article class="">
-    <h3>Analítica e inteligencia del negocio</h3>
+    <h3>Analitica e inteligencia del negocio</h3>
     <ul>
       <li> Es el empleo de herramientas y técnicas para la identificación de
       oportunidades de negocio en base a los datos de los clientes actuales.</li>
@@ -61,7 +61,7 @@
   </article>
 
   <article class="">
-    <h3>Integración</h3>
+    <h3>Integracion</h3>
     <ul>
       <li>Es el conjunto de software que da soporte a un CRM conformado por
       un Front Office y un Back Office.</li>
