--- a/views/spt.hbs
+++ b/views/spt.hbs
@@ -1,7 +1,7 @@
 <h1>{{title}}</h1>
 
 <article class="">
-  <h2>Definición</h2>
+  <h2>Definicion</h2>
 
   <p class="container">
     Su principal objetivo es llevar el registro de actividades y operaciones
@@ -17,7 +17,7 @@
 </article>
   
 <section>
-  <h2>Transacción</h2>
+  <h2>Transaccion</h2>
   <p>
     Una transacción es un intercambio de información que es reflejada en
     un medio persistente (por ejemplo un DBMS), y debe contar con las
