--- a/views/mis.hbs
+++ b/views/mis.hbs
@@ -1,7 +1,7 @@
 <h1>{{title}}</h1>
 
 <article class="">
-  <h2>Definición</h2>
+  <h2>Definicion</h2>
   <img src="/images/mis4.gif" alt="">
   <p>
     <ul>
@@ -20,7 +20,7 @@
 </article>
 
 <article class="">
-  <h2>¿De dónde viene la información?</h2>
+  <h2>¿De donde viene la informacion?</h2>
   <p>De sistemas <a href="spt">TPS</a>: </p>
   <ul>
     <li> Sistemas de Inventario</li>
