prueba sobre dialid.hbs

--- a/views/sistemas.hbs
+++ b/views/sistemas.hbs
@@ -1,5 +1,5 @@
 <h1>{{title}}</h1>
 
 <a href="spt">Sistema de Procesamiento de Transacciones</a>
-<a href="mis">Sistema de Información para la Administración</a>
-<a href="crm">Administración de Relacion con el Cliente</a>
+<a href="mis">Sistema de Informacion para la Administracion</a>
+<a href="crm">Administracion de Relacion con el Cliente</a>
