--- a/views/dialid.hbs
+++ b/views/dialid.hbs
@@ -1,5 +1,5 @@
 <h1>{{title}}</h1>
-<img src="/images/.jpg" alt="">
+<img src="/images/dialid.jpg" width="100" height="100" alt="">
 <article class="">
   
   <p>
