--- a/views/dialid.hbs
+++ b/views/dialid.hbs
@@ -1,14 +1,14 @@
 <h1>{{title}}</h1>
-<img src="/images/dialid.jpg" width="100" height="100" alt="">
+<img src="/images/dialid.jpg"  alt="">
 <article class="">
   
   <p>
     <ul>
-     <li>Lezly Dialid Cerón Rodríguez
-     313021455
-     dialid.ceron@gmail.com
-     Ingeniería en Computación Octavo Semestre
-     </li>
+     <li>Lezly Dialid Cerón Rodríguez </li>
+     <li>313021455 </li>
+     <li>dialid.ceron@gmail.com </li>
+     <li>Ingeniería en Computación Octavo Semestre </li>
+     <li>https://www.facebook.com/scherezade.deidarazoka</li>
      <h2>Hobbies </h2>
       <li>Ajedrez, literatura, baile</li>
     </ul>
