--- a/views/conceptos.hbs
+++ b/views/conceptos.hbs
@@ -1,53 +1,77 @@
-<h1>Conceptos</h1>
-<img src="/images/datoInfo.jpg" alt="" width="50%">
-<article class="">
-  <h2>Dato</h2>
-  <p>
-    <ul>
-      <li>Derivado del latin “datum” cuyo significado literal es “hecho”.</li>
-      <li>Un dato no dice nada por sí solo, aislado carece de valor o relevancia.</li>
-      <li>Los datos son los insumos para generar información.</li>
-      Características:
-      <ul>
-        <li> Es construido o generado. </li>
-        <li> Debe ser almacenado en un medio físico.</li>
-        <li> Deben ser expresados en un lenguaje conocido.</li>
+<h1 class="center grey lighten-2">Conceptos</h1>
+
+<div class="row pink lighten-5">
+  <article class="col s6">
+    <h2 class="center">Dato</h2>
+    <p>
+      <ul class="center">
+        <li>Derivado del latin <I><B>“datum”</B></I> cuyo significado literal es <I><B>“hecho”</B></I>.</li>
+        <li>Un dato no dice nada por sí solo, aislado carece de valor o relevancia.</li>
+        <li>Los datos son los insumos para generar información.</li>
+        <br>
+        <B>Características:</B>
+        <br>
+        <br>
+        <ul>
+          <li> Debe ser almacenado en un medio físico.</li>
+          <li> Es construido o generado. </li>
+          <li> Deben ser expresados en un lenguaje conocido.</li>
+        </ul>
       </ul>
-    </ul>
-  </p>
+    </p>
+  </article>
 
-</article>
+  <article class="col s5">
+    <h2 class="center">Informacion</h2>
+    <div class="center">
+      <p>
+        Se produce información cuando un conjunto de datos son procesados por un sistema. 
+        Para ser útil, la información debe ser relevante, completa, precisa y 
+        actual.
+      </p>
+      <B>Características:</B>
+      <ul>
+        <li> Relevante. </li>
+        <li> Organizada para un proposito.</li>
+        <li> Tiene un contexto.</li>
+      </ul>
+    </div>
+  </article>
+</div>
 
-<article class="">
-  <h2>Informacion</h2>
+<div class="center">
+  <img src="/images/datoInfo.jpg" alt="" width="50%">
+</div>
+
+<article class="si pink lighten-5">
+  <h2 class="center">Sistemas de informacion</h2>
   <p>
-    Se produce información cuando un conjunto de datos son procesados
-    por un sistema. <br>
-    Para ser útil, la información debe ser relevante, completa, precisa y
-    actual.
+    Sistema de información se puede entender como el conjunto de tecnologías, procesos, aplicaciones de
+    negocios y software disponibles para las personas dentro de una organización.
+    Es un conjunto de elementos que interactúan entre sí con un fin común; que permite que la información 
+    esté disponible para satisfacer las necesidades en una organización. Los sistemas de información, 
+    permiten incrementar el crecimiento económico.
   </p>
-  Características:
-  <ul>
-    <li> Relevante. </li>
-    <li> Organizada para un proposito.</li>
-    <li> Tiene un contexto.</li>
+
+  <p>Un Sistema de Información realiza cuatro actividades básicas: </p>
+
+    <ul class="collapsible">
+    <li>
+      <div class="collapsible-header"><i class="material-icons">input</i>Entrada de información</div>
+      <div class="collapsible-body white"><span>Proceso en el cual el sistema toma los datos que requiere.</span></div>
+    </li>
+    <li>
+      <div class="collapsible-header"><i class="material-icons">save</i>Almacenamiento de información</div>
+      <div class="collapsible-body white"><span>Puede hacerse por computadora o archivos físicos para conservar la información.</span></div>
+    </li>
+    <li>
+      <div class="collapsible-header"><i class="material-icons">cached</i>Procesamiento de la información</div>
+      <div class="collapsible-body white"><span>Permite la transformación de los datos fuente en información que puede ser utilizada para la toma de decisiones.</span></div>
+    </li>
+    <li>
+      <div class="collapsible-header"><i class="material-icons">exit_to_app</i>Salida de información</div>
+      <div class="collapsible-body white "><span>Es la capacidad del sistema para producir  la información procesada o  sacar  los datos de entrada al exterior.</span></div>
+    </li>
   </ul>
-</article>
 
-<article class="">
-  <h2>Sistemas de informacion</h2>
-  <p>
-
-    Sistema de información se puede entender como el conjunto de tecnologías, procesos, aplicaciones de negocios y software disponibles para las personas dentro de una organización.
-
-    Es un conjunto de elementos que interactúan entre sí con un fin común; que permite que la información esté disponible para satisfacer las necesidades en una organización. Los sistemas de información, permiten incrementar el crecimiento económico.
-
-    Un Sistema de Información realiza cuatro actividades básicas:
-    <ul>
-      <li>Entrada de información: proceso en el cual el sistema toma los datos que requiere.</li>
-      <li>Almacenamiento de información: puede hacerse por computadora o archivos físicos para conservar la información.</li>
-      <li>Procesamiento de la información: permite la transformación de los datos fuente en información que puede ser utilizada para la toma de decisiones</li>
-      <li>Salida de información: es la capacidad del sistema para producir  la información procesada o  sacar  los datos de entrada al exterior.</li>
-    </ul>
-  </p>
 </article>
